<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_game">

    <fragment
        android:id="@+id/navigation_game"
        android:name="com.example.lightsoutnav.GameFragment"
        android:label="@string/title_game"
        tools:layout="@layout/fragment_game" />

    <fragment
        android:id="@+id/navigation_color"
        android:name="com.example.lightsoutnav.ColorFragment"
        android:label="@string/title_color"
        tools:layout="@layout/fragment_color" />

    <fragment
        android:id="@+id/navigation_help"
        android:name="com.example.lightsoutnav.HelpFragment"
        android:label="@string/title_help"
        tools:layout="@layout/fragment_help" />

    <fragment
        android:id="@+id/navigation_contact"
        android:name="com.example.lightsoutnav.AboutFragment"
        android:label="@string/contact_us"
        tools:layout="@layout/fragment_about" />
</navigation>