<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AboutFragment"
    android:orientation="vertical">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/if_you_are_having_any_trouble_with_our_game_feel_free_to_contact_us"
        android:textSize="24sp"
        android:textStyle="bold"
        android:padding="8dp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/insert_phone_number_here"
        android:textSize="24sp"
        android:textStyle="bold"
        android:padding="8dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/insert_location_here"
        android:textSize="24sp"
        android:textStyle="bold"
        android:padding="8dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/insert_email_here"
        android:textSize="24sp"
        android:textStyle="bold"
        android:padding="8dp"/>

</LinearLayout>